--- a/src/pages/games.jade
+++ b/src/pages/games.jade
@@ -12,7 +12,8 @@ html
     header
         .phone_wrap.mobile_header.clearfix
             .logo
-                img(src="img/logo@2x-min.png")
+                a.clearfix(href="index.html")
+                    img(src="img/logo@2x-min.png")
             .nav_btn
             ul.mobile_nav
                 li 
@@ -35,8 +36,9 @@ html
                     
         .header.clearfix.pc_wrap
             .logo 
-                img(src="img/icon-logo.png")
-                p 焰火工坊
+                a.clearfix(href="index.html")
+                    img(src="img/icon-logo.png")
+                    p 焰火工坊
             nav
                 ul.nav.clearfix
                     li 
