--- a/src/pages/jidome-os.jade
+++ b/src/pages/jidome-os.jade
@@ -23,7 +23,7 @@ block con
             img(src="img/15-min.png")
         .page.glasses.os
             img(src="img/16-min.png")
-            video#video(src="video/20160727.mp4" loop)
+            video#video(src="" loop)
         .page.glasses
             img(src="img/17-min.png")
         .page.glasses
