--- a/src/pages/jimu_store.jade
+++ b/src/pages/jimu_store.jade
@@ -11,7 +11,7 @@ block con
         aside
             .overshadow
                 img.shop_bg(src="img/bg-min.png")
-                video#video(src="video/20160701.mp4" autoplay loop)
+                video#video(src="" autoplay loop)
             .aside_wrap
                 img.mobile(src="img/phone.png")
                 .text
