--- a/src/pages/join_us.jade
+++ b/src/pages/join_us.jade
@@ -9,7 +9,7 @@ block con
                 li
                     h3 unity u3d 开发工程师 主程【北京】
                         img(src="img/arrow@2x.png")
-                    .join_con.show
+                    .join_con
                         h5 岗位职责：
                         p 1、使用Unity3D技术带领开发团队进行手机游戏客户端开发。
                         p 2、精通Unity3D引擎架构设计，熟练使用Unity NGUI等插件，熟悉UI框架和3D性能优化。
@@ -79,7 +79,7 @@ block con
                     p 
                         span 2016-06-29 发布
                         span.right 查看详情
-                    .join_con.show
+                    .join_con
                         h5 岗位职责：
                         p 1、使用Unity3D技术带领开发团队进行手机游戏客户端开发。
                         p 2、精通Unity3D引擎架构设计，熟练使用Unity NGUI等插件，熟悉UI框架和3D性能优化。
