--- a/src/pages/layout/layout.jade
+++ b/src/pages/layout/layout.jade
@@ -6,13 +6,13 @@ html
     title 焰火工坊
     link(href="css/normalize.css" rel="stylesheet")
     link(href="css/index.css" rel="stylesheet")
-    
-    
+
   body
     header
         .phone_wrap.mobile_header.clearfix
             .logo
-                img(src="img/logo@2x-min.png")
+                a.clearfix(href="index.html")
+                    img(src="img/logo@2x-min.png")
             .nav_btn
             ul.mobile_nav
                 li 
@@ -35,8 +35,9 @@ html
                     
         .header.clearfix.pc_wrap
             .logo 
-                img(src="img/icon-logo.png")
-                p 焰火工坊
+                a.clearfix(href="index.html")
+                    img(src="img/logo@2x-min.png")
+                    p 焰火工坊
             nav
                 ul.nav.clearfix
                     li 
