--- a/src/pages/solution.jade
+++ b/src/pages/solution.jade
@@ -10,24 +10,24 @@ block con
             img(src="img/13@2x-min.png" width="100%")
             .text_list
                 h3 特点：
-                p 1 依靠完善的底层优化和低延迟算法，用最低的成本达到接近Gear VR 的流畅体验。
-                p 2 自带九轴陀螺仪、接近感应器及按键。
-                p 3 硬件兼容Cardboard全部应用（标准谷歌Cardboard应用须有按 键支持，大量国产眼镜盒并无按键）
-                p 4 提供极幕OS及极幕商店，丰富的内容服务
-                p 5 丰富的扩展性，配合手柄，未来可与谷歌Daydream无缝兼容。
+                p 1. 依靠完善的底层优化和低延迟算法，用最低的成本达到接近Gear VR 的流畅体验。
+                p 2. 自带九轴陀螺仪、接近感应器及按键。
+                p 3. 硬件兼容Cardboard全部应用（标准谷歌Cardboard应用须有按 键支持，大量国产眼镜盒并无按键）
+                p 4. 提供极幕OS及极幕商店，丰富的内容服务
+                p 5. 丰富的扩展性，配合手柄，未来可与谷歌Daydream无缝兼容。
                 h3 联系方式：
-                p 邮箱：firesvr@firesvr.com
+                p 邮箱：limeng@firesvr.com
                 p 地址：北京朝阳区望京方恒国际中心C座902
         .plan
             .text_list
                 h3 特点：
-                p 1 用最低成本搭建低延迟VR一体机解决方案，距离市场更近。
-                p 2 提供完善的软硬件服务，内置极幕OS及极幕商店.
-                p 3 拥有丰富的游戏视频内容，自带低延迟底层算法，可让Cardboard 应用达到Gear VR级体验。
-                p 4 可与智能手机连接，不会因为VR体验时漏接漏看重要电话短信。
-                p 5 丰富的扩展性，配合手柄，未来可与谷歌Daydream无缝兼容。
+                p 1. 用最低成本搭建低延迟VR一体机解决方案，距离市场更近。
+                p 2. 提供完善的软硬件服务，内置极幕OS及极幕商店.
+                p 3. 拥有丰富的游戏视频内容，自带低延迟底层算法，可让Cardboard 应用达到Gear VR级体验。
+                p 4. 可与智能手机连接，不会因为VR体验时漏接漏看重要电话短信。
+                p 5. 丰富的扩展性，配合手柄，未来可与谷歌Daydream无缝兼容。
                 h3 联系方式：
-                p 邮箱：firesvr@firesvr.com
+                p 邮箱：limeng@firesvr.com
                 p 地址：北京朝阳区望京方恒国际中心C座902
     .solution_wrap.pc_wrap
         ul.solution_list.clearfix
@@ -48,28 +48,28 @@ block con
                 img.title(src="img/title-two.png")
                 ul.text_list
                     li
-                        p 1 依靠完善的底层优化和低延迟算法，用最低的成本达到接近Gear VR的流畅体验。
+                        p 1. 依靠完善的底层优化和低延迟算法，用最低的成本达到接近Gear VR的流畅体验。
                     li 
-                        p 2 自带九轴陀螺仪、接近感应器及按键。
+                        p 2. 自带九轴陀螺仪、接近感应器及按键。
                     li
-                        p 3 硬件兼容Cardboard全部应用（标准谷歌Cardboard应用须有按键支持， 大量国产眼镜盒并无按键）
+                        p 3. 硬件兼容Cardboard全部应用（标准谷歌Cardboard应用须有按键支持， 大量国产眼镜盒并无按键）
                     li
-                        p 4 提供极幕OS及极幕商店，丰富的内容服务
+                        p 4. 提供极幕OS及极幕商店，丰富的内容服务
                     li 
-                        p 5 丰富的扩展性，配合手柄，未来可与谷歌Daydream无缝兼容。
+                        p 5. 丰富的扩展性，配合手柄，未来可与谷歌Daydream无缝兼容。
             li
                 img.title(src="img/title-three.png")
                 ul.text_list1
                     li
-                        p 1 用最低成本搭建低延迟VR一体机解决方案，距离市场更近。
+                        p 1. 用最低成本搭建低延迟VR一体机解决方案，距离市场更近。
                     li
-                        p 2 提供完善的软硬件服务，内置极幕OS及极幕商店.
+                        p 2. 提供完善的软硬件服务，内置极幕OS及极幕商店.
                     li
-                        p 3 拥有丰富的游戏视频内容，自带低延迟底层算法，可让Cardboard应用达到Gear VR级体验。
+                        p 3. 拥有丰富的游戏视频内容，自带低延迟底层算法，可让Cardboard应用达到Gear VR级体验。
                     li
-                        p 4 可与智能手机连接，不会因为VR体验时漏接漏看重要电话短信。
+                        p 4. 可与智能手机连接，不会因为VR体验时漏接漏看重要电话短信。
                     li
-                        p 5 丰富的扩展性，未来可与谷歌Daydream无缝兼容。
+                        p 5. 丰富的扩展性，未来可与谷歌Daydream无缝兼容。
             li
                 img.title(src="img/title-four.png")
                 .contact_wrap.clearfix
